se agregan noticias de newsapi

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <body>
     <h1 class="name">Jose German Lopez Regalado</h1>
     <div class="container-display-AWP rojazo">
-      <div class="texto-medio-AWP">Aplicaciones web progresivas</div>
+      <div class="texto-medio-AWP">SecuryDAD</div>
     </div>
-    <div class="container-display-otro">
+   <!--  <div class="container-display-otro">
       <br>
       <div class="texto-medio-otro">SERVICIOS</div>
       <br>
@@ -64,8 +64,16 @@
           dolor iusto repellendus.
         </p>
       </div>
+    </div> -->
+    <hr />
+    <div class="container-display-otro">
+      <div class="texto-medio-otro">News</div>
     </div>
     <hr />
+<div class="container">
+  <iframe class="responsive-iframe"  src="./newsmodulo/index.html"></iframe>
+</div>
+
     <div class="container-display-otro">
       <div class="texto-medio-otro">VIDEOS</div>
     </div>
