se eliminan videos de default

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="texto-medio-otro">VIDEOS</div>
     </div>
     <hr />
-    <div class="grid-container">
+   <!--  <div class="grid-container">
       <div class="card container-card">
         <iframe
         class="video-format"
@@ -114,7 +114,7 @@
         ></iframe>
         <p>Video</p>
       </div>
-    </div>
+    </div> -->
   </body>
   <br />
   <footer>
