--- a/index.html
+++ b/index.html
@@ -1,123 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#333">
-    <meta name="MobileOptimized" content="width">
-    <meta name="HandleheldFiendly" content="true">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon" href="imagesfavicon.png"/>
-    <link rel="apple-touch-startup-image" href="imagesfavicon.png">
-    <link rel="manifest" href="manifest.json">
-    <script src="main.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <title>AWP</title>
-  </head>
-  <body>
-    <h1 class="name">Jose German Lopez Regalado</h1>
-    <div class="container-display-AWP rojazo">
-      <div class="texto-medio-AWP">SecuryDAD</div>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AWP</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <nav class="navbar navbar-expand-lg" style="background-color: #03eeff;">
+    <div class="container-fluid">
+      <img src="./assets/endian-wifi_features-secure.svg" alt="triangle with all three sides equal" height="87"
+        width="100" />
+
+      <a class="navbar-brand" href="#"> Security</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./comenzar.html">Informacion Basica</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown link
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-   <!--  <div class="container-display-otro">
-      <br>
-      <div class="texto-medio-otro">SERVICIOS</div>
-      <br>
-    </div>
-    <hr />
-    <div class="grid-container">
-      <div class="card container-card">
-        <p>Diseño</p>
-        <img src="./diseno.png" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-          debitis ipsam porro praesentium adipisci at. Ipsum excepturi quisquam,
-          dolor officia magni corrupti odio possimus vitae, ut commodi voluptate
-          pariatur temporibus?
-        </p>
-      </div>
+  </nav>
+</head>
 
-      <div class="card container-card">
-        <p>Front-End</p>
-        <img src="./front.png" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat rem
-          officia earum voluptas sit soluta voluptatum tenetur voluptates vero
-          natus nobis explicabo vel, modi minima asperiores? Cumque voluptatem
-          et beatae.
-        </p>
-      </div>
+<body>
+  <div id="texto1"><img src="assets/news-svgrepo-com.svg" height="50" width="60"></img>
+    <h1>Noticias</h1>
+  </div>
+  <div>
 
-      <div class="card container-card col-4">
-        <p>Backend</p>
-        <img src="./engrane.png" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam at
-          quos sit accusantium nostrum voluptas id illum aspernatur eius
-          architecto voluptatem dolorem tempora laboriosam earum officiis, ex
-          dolor iusto repellendus.
-        </p>
-      </div>
-    </div> -->
-    <hr />
-    <div class="container-display-otro">
-      <div class="texto-medio-otro">News</div>
-    </div>
-    <hr />
-<div class="container">
-  <iframe class="responsive-iframe"  src="./newsmodulo/index.html"></iframe>
-</div>
+    <div class="row row-cols-1 row-cols-md-3 g-4" id="noticiasContainer"></div>
+  </div>
 
-    <div class="container-display-otro">
-      <div class="texto-medio-otro">VIDEOS</div>
-    </div>
-    <hr />
-   <!--  <div class="grid-container">
-      <div class="card container-card">
-        <iframe
-        class="video-format"
-          src="https://www.youtube.com/embed/XqFR2lqBYPs"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <p>video</p>
-      </div>
+  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 
-      <div class="card container-card">
-        <iframe
-        class="video-format"
-          src="https://www.youtube.com/embed/ivdTnPl1ND0"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <p>video</p>
-      </div>
 
-      <div class="card container-card col-4">
-        <iframe
-        class="video-format"
-          src="https://www.youtube.com/embed/1hpc70_OoAg"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <p>Video</p>
-      </div>
-    </div> -->
-  </body>
-  <br />
-  <footer>
-    <div><p>Jose German Lopez Regalado</p></div>
-  </footer>
+</body>
+<footer>
+  <p>Author: Jose German Lopez Regalado<br>
+    <a href="mailto:hege@example.com">hege@example.com</a>
+  </p>
+</footer>
+
 </html>
